4763
Doesn't happen in trunk.
```scala
<console>:5: error: double definition:
method foo_=:[T](implicit evidence$$1: Manifest[T])Unit and
method foo_=:(x$$1: Manifest[_])Unit at line 5
have same type after erasure: (evidence$$1: scala.reflect.Manifest)Unit
       class Foo {var foo: Manifest[_] = null; def foo_=[T:Manifest]: Unit = foo = manifest[T]}
                                                   ^
```
